Fix height profile broken tooltip and axis labels on IE

--- a/QWC2Components/plugins/style/HeightProfile.css
+++ b/QWC2Components/plugins/style/HeightProfile.css
@@ -25,9 +25,11 @@
     fill: rgba(255,0,0,0.5);
 }
 
-#HeightProfile g.ct-labels span.ct-label {
+#HeightProfile g.ct-labels .ct-label {
     color: gray;
-    font-size: 1rem;
+    fill: gray;
+    text-anchor: middle;
+    font-size: 0.75rem;
     display: flex;
 }
 
@@ -45,7 +47,7 @@
 
 #HeightProfile text.ct-axis-title {
     fill: gray;
-    font-size: 1.15rem;
+    font-size: 0.8rem;
 }
 
 #HeightProfile span.height-profile-tooltip {
@@ -56,7 +58,6 @@
     border-radius: 0.5em;
     padding: 0.5em;
     color: white;
-    font-size: 1.1rem;
     transform: translate(-50%, 0%);
     white-space: nowrap;
 }
